[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/CommandPalettePopup/SettingsSetter.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Image" id=11]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=10]
flags = 4
flags = 4
image = SubResource( 11 )
size = Vector2( 16, 16 )

[node name="SettingsSetter" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVB" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PathLabel" type="Label" parent="MainVB"]
margin_right = 1016.0
margin_bottom = 14.0
text = "Some/PathTo/AProperty"
align = 1
valign = 1
autowrap = true

[node name="MainMarginContainer" type="MarginContainer" parent="MainVB"]
margin_top = 18.0
margin_right = 1016.0
margin_bottom = 538.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/margin_right = 55
custom_constants/margin_top = 10
custom_constants/margin_left = 55
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="MainVB/MainMarginContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 55.0
margin_top = 258.0
margin_right = 961.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_styles/tab_fg = SubResource( 1 )
custom_styles/tab_disabled = SubResource( 2 )
custom_styles/tab_bg = SubResource( 3 )
custom_styles/panel = SubResource( 4 )
tabs_visible = false

[node name="CheckBox" type="CheckBox" parent="MainVB/MainMarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 4
text = "On"

[node name="OptionButton" type="OptionButton" parent="MainVB/MainMarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 4
align = 1

[node name="SpinBox" type="SpinBox" parent="MainVB/MainMarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 0 )
focus_mode = 2
size_flags_vertical = 4
align = 1

[node name="FileDirLineEdit" type="HBoxContainer" parent="MainVB/MainMarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="MainVB/MainMarginContainer/TabContainer/FileDirLineEdit"]
margin_right = 906.0
margin_bottom = 520.0
size_flags_horizontal = 3
custom_styles/tab_fg = SubResource( 5 )
custom_styles/tab_disabled = SubResource( 6 )
custom_styles/tab_bg = SubResource( 7 )
custom_styles/panel = SubResource( 8 )
tabs_visible = false

[node name="LineEdit" type="LineEdit" parent="MainVB/MainMarginContainer/TabContainer/FileDirLineEdit/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
caret_blink = true
caret_blink_speed = 0.5

[node name="TextEdit" type="TextEdit" parent="MainVB/MainMarginContainer/TabContainer/FileDirLineEdit/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
draw_tabs = true
caret_blink = true

[node name="FileDirButton" type="ToolButton" parent="MainVB/MainMarginContainer/TabContainer/FileDirLineEdit"]
visible = false
margin_left = 104.0
margin_right = 116.0
margin_bottom = 38.0
icon = SubResource( 10 )

[node name="FileDialog" type="FileDialog" parent="MainVB/MainMarginContainer/TabContainer/FileDirLineEdit"]
margin_right = 307.0
margin_bottom = 130.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open a File"
mode = 0
access = 2
show_hidden_files = true
current_dir = "/home/toni/Desktop/CommandPalette"
current_path = "/home/toni/Desktop/CommandPalette/"

[node name="ColorPickerButton" type="ColorPickerButton" parent="MainVB/MainMarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="HintMarginContainer" type="MarginContainer" parent="MainVB"]
visible = false
margin_top = 280.0
margin_right = 1016.0
margin_bottom = 538.0
size_flags_vertical = 3
custom_constants/margin_right = 25
custom_constants/margin_left = 25

[node name="HintLabel" type="Label" parent="MainVB/HintMarginContainer"]
margin_left = 25.0
margin_top = 122.0
margin_right = 991.0
margin_bottom = 136.0
size_flags_horizontal = 7
align = 1
valign = 1
autowrap = true

[node name="ButtonsHB" type="HBoxContainer" parent="MainVB"]
margin_top = 542.0
margin_right = 1016.0
margin_bottom = 592.0
rect_min_size = Vector2( 0, 50 )
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="MainVB/ButtonsHB"]
margin_left = 440.0
margin_top = 15.0
margin_right = 494.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Cancel"

[node name="AcceptButton" type="Button" parent="MainVB/ButtonsHB"]
margin_left = 519.0
margin_top = 15.0
margin_right = 575.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Accept"
[connection signal="popup_hide" from="." to="." method="_on_SettingsSetter_popup_hide"]
[connection signal="focus_entered" from="MainVB/MainMarginContainer/TabContainer/FileDirLineEdit" to="." method="_on_FileDirLineEdit_focus_entered"]
[connection signal="pressed" from="MainVB/MainMarginContainer/TabContainer/FileDirLineEdit/FileDirButton" to="." method="_on_FileDirButton_pressed"]
[connection signal="dir_selected" from="MainVB/MainMarginContainer/TabContainer/FileDirLineEdit/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="MainVB/MainMarginContainer/TabContainer/FileDirLineEdit/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="MainVB/ButtonsHB/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="MainVB/ButtonsHB/AcceptButton" to="." method="_on_AcceptButton_pressed"]
